[gd_scene load_steps=10 format=3 uid="uid://bj53s6w12n7ya"]

[ext_resource type="Script" uid="uid://bv6skexvrv481" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://3oofuonw05r8" path="res://assets/first_person_arms.glb" id="2_3vyb7"]
[ext_resource type="PackedScene" uid="uid://lky204uemp8" path="res://scenes/gun.tscn" id="3_gun"]
[ext_resource type="PackedScene" uid="uid://by5ihoam0sbtf" path="res://scenes/health_jug.tscn" id="4_qhqgy"]
[ext_resource type="FontFile" uid="uid://yh04kyitodnp" path="res://assets/Youre Gone It.otf" id="4_tuyoq"]
[ext_resource type="FontFile" uid="uid://dihwvgiaxc7m7" path="res://assets/Youre Gone.otf" id="5_fjrip"]

[sub_resource type="Animation" id="Animation_s2gip"]
resource_name = "aim_forward"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cnq18"]
resource_name = "aim_self"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.523599, 3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o7vfb"]
_data = {
&"aim_forward": SubResource("Animation_s2gip"),
&"aim_self": SubResource("Animation_cnq18")
}

[node name="Player" type="Node3D"]
script = ExtResource("1_g2els")

[node name="ArmsMesh" parent="." instance=ExtResource("2_3vyb7")]

[node name="Gun" parent="." instance=ExtResource("3_gun")]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun"]
libraries = {
&"": SubResource("AnimationLibrary_o7vfb")
}

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 7.105428e-15, -8.742278e-08, -5.5848723e-08, 0.7693438, 0.638835, 6.725817e-08, 0.638835, -0.7693438, 0, 46.103146, -19.681183)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopHUDContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="TargetRow" type="HBoxContainer" parent="CanvasLayer/TopHUDContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TargetLabelStatic" type="Label" parent="CanvasLayer/TopHUDContainer/TargetRow"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_tuyoq")
theme_override_font_sizes/font_size = 24
text = "Target:"

[node name="TargetValuePanel" type="PanelContainer" parent="CanvasLayer/TopHUDContainer/TargetRow"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="TargetValueContainer" type="HBoxContainer" parent="CanvasLayer/TopHUDContainer/TargetRow/TargetValuePanel"]
layout_mode = 2

[node name="LeftArrow" type="Label" parent="CanvasLayer/TopHUDContainer/TargetRow/TargetValuePanel/TargetValueContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "◀"

[node name="TargetLabel" type="Label" parent="CanvasLayer/TopHUDContainer/TargetRow/TargetValuePanel/TargetValueContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fjrip")
theme_override_font_sizes/font_size = 22
text = "PLAYER 1"
horizontal_alignment = 1

[node name="RightArrow" type="Label" parent="CanvasLayer/TopHUDContainer/TargetRow/TargetValuePanel/TargetValueContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "▶"

[node name="RoundRow" type="HBoxContainer" parent="CanvasLayer/TopHUDContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RoundLabelStatic" type="Label" parent="CanvasLayer/TopHUDContainer/RoundRow"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_tuyoq")
theme_override_font_sizes/font_size = 24
text = "Round:"

[node name="RoundValuePanel" type="PanelContainer" parent="CanvasLayer/TopHUDContainer/RoundRow"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="RoundValueContainer" type="HBoxContainer" parent="CanvasLayer/TopHUDContainer/RoundRow/RoundValuePanel"]
layout_mode = 2

[node name="RoundLabel" type="Label" parent="CanvasLayer/TopHUDContainer/RoundRow/RoundValuePanel/RoundValueContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fjrip")
theme_override_font_sizes/font_size = 22
text = "Round 1 | Turn 1"
horizontal_alignment = 1

[node name="BulletRow" type="HBoxContainer" parent="CanvasLayer/TopHUDContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BulletLabelStatic" type="Label" parent="CanvasLayer/TopHUDContainer/BulletRow"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_tuyoq")
theme_override_font_sizes/font_size = 24
text = "Bullets:"

[node name="BulletValuePanel" type="PanelContainer" parent="CanvasLayer/TopHUDContainer/BulletRow"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="BulletValueContainer" type="HBoxContainer" parent="CanvasLayer/TopHUDContainer/BulletRow/BulletValuePanel"]
layout_mode = 2

[node name="BulletLabel" type="Label" parent="CanvasLayer/TopHUDContainer/BulletRow/BulletValuePanel/BulletValueContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fjrip")
theme_override_font_sizes/font_size = 22
text = "Live: 0 | Blank: 0"
horizontal_alignment = 1

[node name="InventoryContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(0, -60)
theme_override_constants/separation = 10
alignment = 1

[node name="LeftArrow" type="Label" parent="CanvasLayer/InventoryContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "◀"

[node name="SlotContainer" type="HBoxContainer" parent="CanvasLayer/InventoryContainer"]
layout_mode = 2

[node name="RightArrow" type="Label" parent="CanvasLayer/InventoryContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "▶"

[node name="HealthJug" parent="." instance=ExtResource("4_qhqgy")]
transform = Transform3D(-2.6226832e-07, 0, 6, 0, 6, 0, -6, 0, -2.6226832e-07, -16.181383, 13.413353, 4.2951813)
